--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT=8080
 MONGODB_CNN=mongodb+srv://josemina:K6EMU7KXKUrrkVLY@cluster-jose.ytd9ovh.mongodb.net/cafeDB
+SECRETORPRIVATEKEY=Est03sMyPub1cK3y23@913
 
