--- a/.env
+++ b/.env
@@ -2,3 +2,6 @@ PORT=8080
 MONGODB_CNN=mongodb+srv://josemina:K6EMU7KXKUrrkVLY@cluster-jose.ytd9ovh.mongodb.net/cafeDB
 SECRETORPRIVATEKEY=Est03sMyPub1cK3y23@913
 
+GOOGLE_CLIENT_ID=348246975279-mfuitamcl5a2sjn0i0srol07br6nbcb7.apps.googleusercontent.com 
+GOOGLE_SECRET_ID=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
+
