Manage image and cloudinary

--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ SECRETORPRIVATEKEY=Est03sMyPub1cK3y23@913
 GOOGLE_CLIENT_ID=348246975279-mfuitamcl5a2sjn0i0srol07br6nbcb7.apps.googleusercontent.com 
 GOOGLE_SECRET_ID=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
 
+CLOUDINARY_URL=cloudinary://519666751611334:a6nJEC48xm7aWL-tDIT4NPBulrk@dnzhshyyp
